--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  provider: ^4.3.1
+  shared_preferences: ^0.5.8
+  flutter_text_drawable: ^0.3.1
+  circular_reveal_animation: ^1.1.5
+  file_picker: ^1.13.0
+  nearby_connections: ^1.1.1+1
+
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +50,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
