--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: cend
-description: An application to share data via wifi.
+name: Cend
+description: An application to share data between phones.
 
 publish_to: 'none'
 
@@ -20,7 +20,6 @@ dependencies:
   nearby_connections: ^1.1.1+1
   fancy_dialog: ^1.0.3
   animated_splash_screen: ^1.0.0+1
-  rich_alert: ^0.1.32
 
 dev_dependencies:
   flutter_test:
